--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
   "files.associations": {
-    "array": "c"
+    "array": "c",
+    "*.tcc": "c",
+    "concepts": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "memory": "c",
+    "string_view": "c",
+    "ostream": "c",
+    "streambuf": "c",
+    "functional": "c",
+    "tuple": "c"
   }
 }
